@@ -1,3 +1,8 @@
+2009-02-12  Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* msgqueue.c:
+	[ 2590121 ] localConnectServer only retries once after interrupt
+
 2009-02-11  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* httpAdapter.c:
